--- a/chat.css
+++ b/chat.css
@@ -48,7 +48,7 @@ input[type=submit]:hover {
 }
   
 body {
-    background-image:linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.9)), url('ICWT Images/chatbg.jpg');
+    background-image:linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.9)), url('chatbg.jpg');
     background-size: cover;
     background-repeat: none;
     color:white;
